refactoring a bit cli.c to handle integration testing

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,6 +13,7 @@ IF (WITH_DTRACE)
 ENDIF ()
 
 SET(CMAKE_C_FLAGS "-std=c99 -g3 -Wall ${CC_WARNING_FLAGS} ${CMAKE_C_FLAGS}")
+SET(PYTHON_EXECUTABLE, "python3")
 INCLUDE_DIRECTORIES(
     deps/cifra/src/ext
     deps/cifra/src
@@ -135,6 +136,10 @@ ELSE ()
 ENDIF ()
 
 ADD_CUSTOM_TARGET(check env BINARY_DIR=${CMAKE_CURRENT_BINARY_DIR} prove --exec '' -v ${CMAKE_CURRENT_BINARY_DIR}/*.t t/*.t WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR} DEPENDS ${TEST_EXES} cli)
+ADD_CUSTOM_TARGET(integration
+  COMMAND cmake "-E" "env" python3 "${CMAKE_CURRENT_SOURCE_DIR}/t/ipmininet/ipmininet_tests.py"
+  WORKING_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}"
+  DEPENDS ${TEST_EXES} cli)
 
 IF (CMAKE_SYSTEM_NAME STREQUAL "Linux")
      SET(CMAKE_C_FLAGS "-D_GNU_SOURCE -pthread ${CMAKE_C_FLAGS}")
